CSS: Fix control shadow overlapping tab bar flyouts
refs #3815

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -133,7 +133,7 @@
       border-bottom: 1px solid #eee;
       position: relative;
 
-      &:after {
+      &:before {
         background: -webkit-linear-gradient(top,#fff 0%,rgba(255,255,255,0) 100%);
         background:    -moz-linear-gradient(top,#fff 0%,rgba(255,255,255,0) 100%);
         background:     -ms-linear-gradient(top,#fff 0%,rgba(255,255,255,0) 100%);
